--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,8 +43,10 @@ release:
   stage: deploy
   only:
     - tags
+  variables:
+    SHARED_ARRAY_VERSION: "$CI_COMMIT_TAG"
   script:
     - apt-get install -y python3-numpy python3-setuptools python3-pypandoc twine
-    - echo $CI_COMMIT_TAG > .version
+    - echo $SHARED_ARRAY_VERSION > .version
     - python3 setup.py sdist
     - twine upload dist/*
